<resources>
    <string name="app_name">Supabase001</string>
    <string name="titulo">LISTADO DE CAJEROS</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="caja">Caja</string>
    <string name="imagen">Imágen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insertar">INSERTAR</string>
</resources>