<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/tvCaja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caja"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/tvImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imagen"
        android:textSize="14sp"/>

</LinearLayout>